tests/errors/sem_aug_add_fun.kt
fun main() {
var func: (Int, Int) -> Int = ::add
func += ::add
}
